# FastAPI-Practice

./: .gitignore  LICENSE  docker-compose.yml
backend/: .dockerignore  Dockerfile  app.py  dependencies.py  main.py  pyproject.toml  requirements.txt
backend/api/: auth.py  config.py  items.py  users.py
backend/auth/: password.py  token.py
backend/config/: settings.py
backend/crud/: item.py  user.py
backend/database/: session.py
backend/exceptions/: http.py
backend/models/: base.py  item.py  user.py
backend/performance/: locustfile.py
backend/schemas/: auth.py  item.py  misc.py  user.py
backend/tests/: conftest.py
backend/tests/test_crud/: test_user.py
scripts/: freeze.bat  perf.bat
